# waf

./: Cargo.toml  README.md  build.rs
res/shaders/: fragment.frag  h_vertex.vert  vertex.vert
src/: camera.rs  event_loop.rs  main.rs  shader.rs  state.rs  texture.rs  vertex.rs  window.rs
src/ecs/: mod.rs  object.rs  scene.rs
src/ecs/component/: instance.rs  mesh.rs  mod.rs
