[package]
name = "sit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26"
env_logger = "0.9"
log = "0.4"
wgpu = { version = "0.13", features = [ "spirv" ] }
cgmath = "0.18"
anyhow = "1.0" 
image = "0.24.5"
bytemuck = { version = "1.12.3", features = [ "derive" ] }
pollster = "0.2.5"

[build-dependencies]
naga = { version = "0.9.0", features = [ "glsl-in", "spv-out" ] }
codespan-reporting = "0.11.1"

